[package]
name = "chain_builder"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]

[dependencies]
time = "0.1"

chain_pan = { path = "../chain_pan"  }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }
script = { path = "../script" }
