[package]
name = "db"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rocksdb = { git = "https://github.com/ethcore/rust-rocksdb" }
elastic-array = "0.6"
parking_lot = { version = "~0.5.5", features = ["deadlock_detection"] }
log = "0.3"
bit-vec = "0.4"
lru-cache = "0.1"
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
chain = { path = "../chain" }
script = { path = "../script" } #TODO maybe get rid of script dependency for db

#[dev-dependencies]
#tempdir = "0.3"
#test-data = { path = "../test-data" }
