[package]
name = "memory_pool"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]

[dependencies]
byteorder = "1.0"
heapsize = "0.4"
parking_lot = { version = "~0.5.5", features = ["deadlock_detection"] }
bitcrypto = { path = "../crypto" }
chain_pan = { path = "../chain_pan" }
db = { path = "../db" }
params = { path = "../params" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }
verification = { path = "../verification" }
keys = { path = "../keys" }
script = { path = "../script" }

[dev-dependencies]
chain_builder = { path = "../chain_builder" }
