[package]
name = "p2p"
version = "0.1.0"
authors = ["Julian Konchunas <konchunas@gmail.com>"]

[dependencies]
routing="~0.34.0"
lru_time_cache = "~0.7.0"
maidsafe_utilities = "~0.14.0"
serde = "~1.0.11"
serde_derive = "~1.0.11"

unwrap = "~1.1.0"
log = "~0.3.8"

primitives = { path = "../primitives" }