[package]
name = "rpc"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]

[lib]

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-serialize = "0.3"
tokio-core = "0.1.1"
jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
jsonrpc-macros = { git = "https://github.com/ethcore/jsonrpc.git" }
jsonrpc-http-server = { git = "https://github.com/ethcore/jsonrpc.git" }

serialization = { path = "../serialization" }
chain_pan = { path = "../chain_pan" }
primitives = { path = "../primitives" }
params = { path = "../params" }
db = { path = "../db" }
memory_pool = { path = "../mempool" }
verification = { path = "../verification" }
script = { path = "../script" }
keys = { path = "../keys" }
sync = { path = "../sync" }

[dev-dependencies]
chain_builder = { path = "../chain_builder" }
