[package]
name = "script"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
bitcrypto = { path = "../crypto" }
chain_pan = { path = "../chain_pan" }
keys = { path = "../keys" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
log = "0.3"
