[package]
name = "sync"
version = "0.1.0"
authors = ["Julian Konchunas <konchunas@gmail.com>"]

[dependencies]
log = "~0.3.8"
futures = "~0.1.21"
tokio-core = "0.1.16"
futures-cpupool = "~0.1.8"

serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }
memory_pool = { path = "../mempool" }
db = { path = "../db" }
bitcrypto = { path = "../crypto" }
params = { path = "../params" }
chain = { path = "../chain" }
verification = { path = "../verification" }
message = { path = "../message" }
primitives = { path = "../primitives" }
p2p = { path = "../p2p" }