[package]
name = "verification"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]

[dependencies]
time = "0.1"
lazy_static = "0.2"
log = "0.3"
rayon = "0.8"
parking_lot = { version = "~0.5.5", features = ["deadlock_detection"] }
primitives = { path = "../primitives" }
chain_pan = { path = "../chain_pan"  }
serialization = { path = "../serialization" }
script = { path = "../script" }
params = { path = "../params" }
db = { path = "../db" }
bitcrypto = { path = "../crypto" }

[dev-dependencies]
chain_builder = { path = "../chain_builder" }
db = { path = "../db" }
